erDiagram
    User {
        int id PK
        string email UK
        string passwordHash "bcrypt — never plaintext"
        string name
        string avatarUrl
        enum role "ADMIN | USER"
        datetime createdAt
        datetime updatedAt
    }

    Driver {
        int id PK
        string firstName
        string lastName
        int number "partial unique while deletedAt IS NULL"
        string code "VER, NOR... — partial unique while deletedAt IS NULL"
        string headshotUrl
        string externalId UK
        datetime createdAt
        datetime updatedAt
        datetime deletedAt
    }

    Constructor {
        int id PK
        string name
        string color
        string logoUrl
        string externalId UK
        datetime createdAt
        datetime updatedAt
        datetime deletedAt
    }

    Circuit {
        int id PK
        string name
        string country
        string city
        float circuitLength
        string externalId UK
        datetime createdAt
        datetime updatedAt
        datetime deletedAt
    }

    Season {
        int id PK
        int year UK
        boolean isActive
        int driverCount
        datetime createdAt
    }

    DriverSeason {
        int id PK
        int driverId FK
        int constructorId FK
        int seasonId FK
    }

    Race {
        int id PK
        string name
        int round
        datetime date
        datetime qualifyingDate "nullable until known via external API"
        datetime sprintDate "nullable — only sprint weekends"
        datetime lockDate "deadline for predictions; not necessarily = qualifyingDate"
        int seasonId FK
        int circuitId FK
        enum status "UPCOMING | QUALIFYING_LOCKED | COMPLETED | CANCELLED | POSTPONED"
        datetime createdAt
        datetime updatedAt
    }

    League {
        int id PK
        string name
        string inviteCode UK
        int maxMembers "default 11 — one slot per team in the grid (2026: 11 teams)"
        int seasonId FK
        int createdById FK
        enum draftStatus "PENDING | LIVE | COMPLETED"
        enum status "ACTIVE | ARCHIVED | CANCELLED"
        datetime createdAt
        datetime updatedAt
    }

    LeagueMember {
        int id PK
        int leagueId FK
        int userId FK
        boolean isOwner
        enum status "ACTIVE | LEFT | KICKED"
        datetime joinedAt
    }

    FantasyTeam {
        int id PK
        int leagueMemberId FK "UK - 1:1"
        int driver1Id FK "nullable until draft completes"
        int driver2Id FK "nullable until draft completes"
        int constructorId FK "nullable until draft completes"
        datetime createdAt
    }

    DraftPick {
        int id PK
        int leagueId FK
        int leagueMemberId FK
        int pickNumber "unique within leagueId — enforce via @@unique([leagueId, pickNumber])"
        int round "1-3 — driver1, driver2, constructor (no reserve — ADR-0006)"
        int driverId FK "nullable — XOR with constructorId, exactly one must be set"
        int constructorId FK "nullable — XOR with driverId, exactly one must be set"
        datetime pickedAt
    }

    RaceResult {
        int id PK
        int raceId FK
        int driverId FK
        int constructorId FK
        int position
        int points
        int gridPosition
        boolean fastestLap
        enum status "CLASSIFIED | DNF | DSQ | DNS"
        string externalId
        datetime createdAt
        datetime updatedAt
    }

    ConstructorResult {
        int id PK
        int raceId FK
        int constructorId FK
        int driver1Points
        int driver2Points
    }

    Prediction {
        int id PK
        int leagueMemberId FK
        int raceId FK
        int predictedWinnerId FK
        int predictedPoleId FK
        int predictedTopConstructorId FK
        boolean winnerCorrect "nullable — cached from RaceResult, null until race scored"
        boolean poleCorrect "nullable — cached from RaceResult, null until race scored"
        boolean topConstructorCorrect "nullable — cached from RaceResult, null until race scored"
        int bonusPoints "default 0, NOT NULL — total of correct predictions × bonus values"
        datetime createdAt
        datetime updatedAt
    }

    LeagueStanding {
        int id PK
        int leagueMemberId FK
        int raceId FK
        int driverPoints
        int constructorPoints
        int predictionPoints
        int totalPoints
        int position
        int positionChange
        datetime createdAt
    }

    SyncLog {
        int id PK
        enum type "DRIVERS | CONSTRUCTORS | CIRCUITS | RACES | RESULTS"
        enum status "SUCCESS | PARTIAL | FAILED"
        int recordsCreated
        int recordsUpdated
        int recordsSkipped
        string error "nullable — present only when status != SUCCESS"
        int triggeredById FK "nullable — null for cron-triggered syncs (no user)"
        datetime createdAt
    }

    %% Multi-column unique constraints (cannot express in Mermaid field syntax):
    %% DraftPick:    @@unique([leagueId, pickNumber])
    %%               @@unique([leagueId, leagueMemberId, round]) — one pick per round per member
    %% LeagueMember: @@unique([leagueId, userId]) — a user can only join a league once

    %% Relationships

    User ||--o{ LeagueMember : "joins leagues"
    User ||--o{ League : "creates"
    User ||--o{ SyncLog : "triggers"

    Driver ||--o{ DriverSeason : "plays in"
    Constructor ||--o{ DriverSeason : "has"
    Season ||--o{ DriverSeason : "contains"

    Season ||--o{ Race : "has"
    Circuit ||--o{ Race : "hosts"
    Season ||--o{ League : "belongs to"

    League ||--o{ LeagueMember : "has"
    League ||--o{ DraftPick : "has"

    LeagueMember ||--|| FantasyTeam : "owns"
    LeagueMember ||--o{ DraftPick : "makes"
    LeagueMember ||--o{ Prediction : "makes"
    LeagueMember ||--o{ LeagueStanding : "has"

    FantasyTeam }o--|| Driver : "driver1"
    FantasyTeam }o--|| Driver : "driver2"
    FantasyTeam }o--|| Constructor : "picks"

    DraftPick }o--o| Driver : "picks driver"
    DraftPick }o--o| Constructor : "picks constructor"

    Race ||--o{ RaceResult : "has"
    Race ||--o{ ConstructorResult : "has"
    Race ||--o{ Prediction : "for"
    Race ||--o{ LeagueStanding : "snapshot at"

    Driver ||--o{ RaceResult : "has"
    Constructor ||--o{ RaceResult : "has"
    Constructor ||--o{ ConstructorResult : "has"

    Prediction }o--|| Driver : "predicted winner"
    Prediction }o--|| Driver : "predicted pole"
    Prediction }o--|| Constructor : "predicted top team"
